# RedFormatter

./: .gitignore  .qmlls.ini  CMakeLists.txt  CMakeUserPresets.json  IssueEditer.qml  IssueList.cpp  IssueList.h  IssueList.qml  IssueManager.cpp  IssueManager.h  IssueWorkTable.cpp  IssueWorkTable.h  IssueWorkTable__.cpp  IssueWorkTable__.h  Main.qml  NewIssue.ui.qml  README.md  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  conanfile.py  conanfile.txt  main.cpp  resource.qrc  uiqrc.qrc
contents/: BackgroundImage.ui.qml  BottomBar.qml  BottomBarButton.ui.qml  CollapsibleSection.qml  ColorizedImage.qml  ContentBlock.qml  CustomDateInput.qml  Issue.ui.qml  IssueMainView.ui.qml  IssueRow.ui.qml  IssueWriterBottomBar.qml  MainView.ui.qml  NewIssue.qml  NewIssue.ui.qml  PlacesDotIndicator.ui.qml  PlacesView.ui.qml  SectionComponent.qml  SubSectionComponent.qml  ThermoView.qml  TodoWorkPlan.qml  TodoWorkPlantest.qml  TopBar.qml  WaveProgressBar.qml  WorkDetailInfo.qml  WorkDetailInfo2.qml  WriteIssue.qml  WriteIssue.ui.qml  writeissuetest.qml
imports/: CMakeLists.txt
imports/Thermo/: CMakeLists.txt  ColorStyle.qml  Room.qml  Rooms.qml  Theme.qml  Thermo.qmlproject  qmldir
imports/ThermoConfiguration/: CMakeLists.txt  Configuration.qml  ThermoConfiguration.qmlproject
src/: main.cpp  main_ui.slint  redfomatter.cpp  redfomatter.h
test_package/: conanfile.py
thermo/: Card.ui.qml  CardRow.ui.qml  LanguageDialog.qml  PlacesDotIndicator.ui.qml  PlacesView.ui.qml  PowerSwitch.qml  RoomControlButton.qml  RoomSchedule.qml  RoomView.qml  TimeIntervalSliderHandle.ui.qml  TopBar.qml
